# BakcylProgramowania_2019

./: .gitignore  CMakeLists.txt  External_ncurses.cmake  klaudia.txt  main.cpp  marcin.txt
Cards/Include/: Card.hpp  Ultimate.hpp
Cards/Source/: Card.cpp  Ultimate.cpp
Cards/Test/: CardTest.cpp  UltimateTests.cpp
Combat/Cards/Include/: CardPool.hpp  MageRaceUltimate.hpp  Monster.hpp  Points.hpp  Spell.hpp  WarriorRaceUltimate.hpp
Combat/Cards/Source/: Card.cpp
Combat/Cards/Test/: CMakeLists.txt
Combat/Decks/Include/: Deck.hpp
Combat/Decks/Source/: Deck.cpp  LimitedDeck.cpp
Combat/Decks/Test/: DeckTests.cpp
Combat/Fight/Include/: Fight.hpp  Game.hpp
Combat/Fight/Source/: Fight.cpp
Combat/Fight/Test/: FightTests.cpp
Combat/Include/: Card.hpp  CardPool.hpp  DamageSpell.hpp  Fight.hpp  Game.hpp  HealSpell.hpp  Monster.hpp  MonsterCard.hpp  Points.hpp  Spell.hpp  SpellCard.hpp  Ultimate.hpp
Combat/Profesja/Include/: Player.hpp  Profession.hpp  ProfessionPaladin.hpp  ProfessionRogue.hpp
Combat/Profesja/Source/: CMakeLists.txt  Player.cpp  ProfessionMage.cpp  ProfessionPaladin.cpp  ProfessionRogue.cpp
Combat/Profesja/Test/: PlayerTest.cpp  ProfessionMage.cpp  ProfessionPaladin.cpp  ProfessionRogue.cpp
Combat/Source/: Card.cpp  DamageSpell.cpp  Fight.cpp  Game.cpp  HealSpell.cpp  MageRaceUltimate.cpp  Monster.cpp  MonsterCard.cpp  Points.cpp  Spell.cpp  SpellCard.cpp  Ultimate.cpp  WarriorRaceUltimate.cpp
Combat/Table/Include/: Table.hpp
Combat/Table/Test/: TableTests.cpp
Combat/Test/: CardTest.cpp  DamageSpellTest.cpp  GameTests.cpp  HealSpellTest.cpp  MageRaceUltimateTests.cpp  MonsterCardTest.cpp  PointsTests.cpp  SpellCardTest.cpp  UltimateTests.cpp  WarriorRaceUltimateTests.cpp
Decks/Include/: Deck.hpp  Handdeck.hpp  LimitedDeck.hpp
Decks/Source/: Deck.cpp  LimitedDeck.cpp
Decks/Test/: CMakeLists.txt  DeckTests.cpp
Handdeck/Include/: Handdeck.hpp
Handdeck/Source/: Deck.cpp  Handdeck.cpp
Handdeck/Test/: DeckTests.cpp  HanddeckTest.cpp
Map/Include/: CommonRoom.hpp  DoorField.cpp  DoorField.hpp  EmptyField.hpp  Field.hpp  FieldTestClass.hpp  FieldTypes.hpp  FightField.hpp  Game.hpp  Map.hpp  MapGeneratorV1.hpp  MapPrinter.hpp  Position.hpp  Random.hpp  Room.hpp  RoomBorders.hpp  SplitDirection.hpp  SquareMap.hpp  TreasureField.hpp  WallField.hpp  map.hpp
Map/Source/: CommonRoom.cpp  DoorField.cpp  EmptyField.cpp  Field.cpp  FieldTestClass.cpp  FightField.cpp  Game.cpp  Map.cpp  MapGeneratorV1.cpp  MapPrinter.cpp  Position.cpp  Random.cpp  Room.cpp  SquareMap.cpp  TreasureField.cpp  WallField.cpp  sampleMap.txt  sampleMapDescribtion.txt
Map/Test/: FieldTest.cpp  GameTest.cpp  MapGeneratorTest.cpp  MapPrinterTest.cpp  MapTest.cpp  PositionTest.cpp  mapTest.cpp
Profesja/Include/: Player.hpp  Profesja.hpp  Profession.hpp  ProfessionMage.hpp  ProfessionPaladin.hpp  ProfessionRogue.hpp
Profesja/Source/: Player.cpp  Profesja.cpp  ProfessionMage.cpp  ProfessionPaladin.cpp  ProfessionRogue.cpp
Profesja/Test/: Profesja_test.cpp  ProfessionMage.cpp  ProfessionPaladin.cpp  ProfessionRogue.cpp
Source/: Accelerometer.cpp  Accelerometer.hpp
Table/Include/: Table.hpp
Table/Source/: Table.cpp
Table/Test/: TableTests.cpp
Test/: FooTest.cpp
zadania/: exceptions.cpp  exceptions.hpp  exceptions_test.cpp  valgrind_and_pointers.cpp  valgrind_and_pointers.hpp  zadanie1.hpp  zadanie2.h  zadanie2.hpp
zadania/Test/: valgrind_and_pointers_test.cpp
zadania/test/: zadanie1_test.cpp  zadanie2_test.cpp
